logs/watchdog_20251011_1745.log
[11/10/2025 17:45:01,67] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 17:45:01,95] END WATCHDOG 
